--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coderhouse",
+  "name": "asawisandwichs",
   "version": "1.0.0",
   "description": "La Pampa, Argentina",
   "main": "index.js",
